# SH4DOWNOME

./: CMakeLists.txt  README-GITHUB-PAGES.md  README.md  beatindicatorwidget.cpp  index.html  main.cpp  mainwindow.cpp  metronomeengine.cpp  obsbeatwidget.cpp  settingsdialog.h  style.css  subdivisionselectordialog.cpp  svgutils.h  timesignaturedialog.cpp
backup 50/: mainwindow.ui  metronomeengine.h  subdivisionselectordialog.h
backup 50/resources/: resources.qrc
src/: BeatIndicatorItem.cpp  BeatIndicatorItem.h  CMakeLists.txt  CustomPatternEditor.cpp  CustomPatternEditor.h  MetronomeController.cpp  MetronomeController.h  NoteImageProvider.cpp  NoteImageProvider.h  SectionListModel.cpp  SectionListModel.h  androidinputdialog.cpp  androidinputdialog.h  appicon.rc  audioengine.cpp  audioengine.h  beatindicatorwidget.cpp  beatindicatorwidget.h  cmake_install.cmake  customsubdivisiondialog.cpp  customsubdivisiondialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  metronomeengine.cpp  metronomeengine.h  noteassembler.cpp  noteassembler.h  obsbeatwidget.cpp  obsbeatwidget.h  obsbeatwindow.cpp  obsbeatwindow.h  patterneditorwidget.cpp  patterneditorwidget.h  polyrhythmdialog.cpp  polyrhythmdialog.h  presetmanager.cpp  presetmanager.h  sectiontablewidget.cpp  (+13 more)
src/android/: AndroidManifest.xml
src/android/src/org/qtproject/example/SH4DOWNOME/: InputDialog.java
src/qml/: BackupSheet.qml  BeatWindow.qml  CustomSubdivisionSheet.qml  Main.qml  OBSWindow.qml  PendulumView.qml  PolyrhythmDialog.qml  PolyrhythmSheet.qml  PresetPickerSheet.qml  SettingsDialog.qml  SettingsSheet.qml  SubdivisionPickerSheet.qml  TimeSignatureDialog.qml  TimeSignatureSheet.qml  qml.qrc
src/resources/: accent_dump.txt  accent_hex.txt  resources.qrc
src/themes/: dark.qss
